<resources>
    <string name="app_name">SampleDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="offers">Offers</string>
    <string name="cart">Cart</string>
    <string name="view_all">View All</string>
    <string name="under_construction">Under construction</string>
</resources>