<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />
    <item
        android:id="@+id/categoriesFragment"
        android:title="@string/category"
        android:icon="@drawable/ic_category" />
    <item
        android:id="@+id/cartFragment"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart" />
    <item
        android:id="@+id/offersFragment"
        android:title="@string/offers"
        android:icon="@drawable/ic_discount" />
    <item
        android:id="@+id/profileSettingsFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile" />
</menu>